fix alignment of times on main page

--- a/app/assets/stylesheets/timer.css.scss
+++ b/app/assets/stylesheets/timer.css.scss
@@ -118,6 +118,7 @@ $header-height: 100px;
 
 .pomodoro_time {
   float: left;
+  max-width: 100px;
 }
 .pomodoro_tag {
   float: left;
